src/tests/snapshots/tera__tests__parser__parser_errors@extends_not_first.txt.snap
---
source: src/tests/parser.rs
expression: res.unwrap_err()
input_file: src/tests/parser_inputs/errors/extends_not_first.txt
---
 Syntax error --> [extends_not_first.txt:3:11]
  |
3 | {% extends "a" %}
  |            ^---
  = `extends` needs to be the first tag of the template, with the exception of macro imports that are allowed before.
        
